<resources>
    <string name="app_name">MineSweeper</string>
    <string name="action_settings">Settings</string>
    <string name="rbEasy">Easy</string>
    <string name="rbNormal">Normal</string>
    <string name="rbHard">Hard</string>
    <string name="rbCustom">Custom</string>
    <string name="tvRows">Rows:</string>
    <string name="tvColumns">Columns:</string>
    <string name="tvBombs">Bombs:</string>
    <string name="tvSalir">Reset game?</string>
    <string name="bYes">Yes</string>
    <string name="bNo">No</string>
    <string name="configBoard">Board</string>
    <string name="sSize">Size</string>
    <string name="sSizeSummary">Chose a size</string>
    <string name="sSizeDialog">Select board size</string>
    <string name="sBombs">Bomb ratio</string>
    <string name="sBombsSummary">Chose the ratio of bombs on the board</string>
    <string name="sBombsRatio">Select a ratio</string>
    <string name="sCounter">Show remaining bombs</string>
    <string name="sCounterSummary">Shows/Hide the remaining bombs counter on the game</string>
    <string name="settingsCustom">Custom board (only if custom checked!)</string>
    <string name="sRowsDialog">Enter number of rows</string>
    <string name="sRowsSummary">Number of rows on the board</string>
    <string name="sRows">Rows</string>
    <string name="sColsDialog">Enter number of columns</string>
    <string name="sColsSummary">Number of columns on the board</string>
    <string name="sCols">Columns</string>
    <string name="sCBombsDialog">Enter ratio of bombs (1–99)</string>
    <string name="sCBombsSummary">Ratio of bombs on the board</string>
    <string name="sCBombs">Bombs</string>
    <string name="sTheme">Dark theme</string>
    <string name="sThemeSummary">Enables dark theme</string>
    <string name="tWin">WIN!</string>
    <string name="toastWarning">Invalid bomb ratio! Setting default</string>
    <string name="tvBombsCounter">Bombs:</string>
    <string name="tGameOver">GAME OVER</string>
    <string name="sizeS">Small</string>
    <string name="sizeM">Medium</string>
    <string name="sizeL">Large</string>
    <string name="custom">Custom</string>
</resources>
